--- a/src/components/utils-tools/debug-logs.html
+++ b/src/components/utils-tools/debug-logs.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        <div class="card-header-icon" style="background-color: #4bca81;">D</div>
+        <div class="card-header-icon" style="background-color: #4bca81">D</div>
         <h2>Debug Logs</h2>
     </div>
     <div class="card-body">
@@ -12,7 +12,11 @@
             <div class="tool-divider"></div>
             <div class="form-element">
                 <label>USER LOOKUP</label>
-                <input type="text" class="input user-search" placeholder="Search by name or username...">
+                <input
+                    type="text"
+                    class="input user-search"
+                    placeholder="Search by name or username..."
+                />
             </div>
             <div class="tool-results user-results hidden"></div>
             <div class="tool-status trace-status hidden">
