--- a/src/components/record/record.css
+++ b/src/components/record/record.css
@@ -215,7 +215,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 0.2s, color 0.2s;
+    transition:
+        background-color 0.2s,
+        color 0.2s;
 }
 
 .close-btn:hover {
