--- a/src/components/settings/settings.css
+++ b/src/components/settings/settings.css
@@ -256,7 +256,7 @@
     cursor: pointer;
 }
 
-.settings-toggle-label input[type="checkbox"] {
+.settings-toggle-label input[type='checkbox'] {
     width: 18px;
     height: 18px;
     cursor: pointer;
