--- a/src/components/utils-tools/search-box.html
+++ b/src/components/utils-tools/search-box.html
@@ -1,7 +1,7 @@
 <div class="search-box">
     <div class="form-element">
         <label class="search-box-label"></label>
-        <input type="text" class="input search-box-input">
+        <input type="text" class="input search-box-input" />
     </div>
     <div class="search-box-dropdown hidden">
         <div class="search-box-results"></div>
