refactor: Replace replaceIcons() with sf-icon web component
Replace the regex-based icon replacement pattern with a new
<sf-icon> custom element that renders SVG icons immediately on
connectedCallback, eliminating the flash of unstyled content
and removing the unusual pattern of replacing document.body.innerHTML.

Changes:
- Create new sf-icon component with reactive name attribute
- Update all templates to use <sf-icon name="iconName">
- Remove replaceIcons() function from icons.js
- Update unit tests to reflect new component approach

The button-icon component remains unchanged and both components
share the same icons registry from icons.js.

--- a/src/components/schema/schema.html
+++ b/src/components/schema/schema.html
@@ -43,7 +43,7 @@
                                     title="Refresh fields"
                                 ></button-icon>
                                 <button class="close-btn" id="closeFieldsBtn" title="Close">
-                                    {{icon:close}}
+                                    <sf-icon name="close"></sf-icon>
                                 </button>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                 <h3>Edit Formula</h3>
                 <div class="modal-field-info" id="modalFieldInfo"></div>
             </div>
-            <button class="close-btn" id="modalCloseBtn" title="Close">{{icon:close}}</button>
+            <button class="close-btn" id="modalCloseBtn" title="Close"><sf-icon name="close"></sf-icon></button>
         </div>
         <div class="modal-body">
             <div class="modal-editor-container">
