--- a/src/components/record/record.html
+++ b/src/components/record/record.html
@@ -52,7 +52,7 @@
                 <h3>Rich Text Preview</h3>
                 <div class="modal-field-info" id="modalFieldInfo"></div>
             </div>
-            <button class="close-btn" id="modalCloseBtn" title="Close">{{icon:close}}</button>
+            <button class="close-btn" id="modalCloseBtn" title="Close"><sf-icon name="close"></sf-icon></button>
         </div>
         <div class="modal-body">
             <div class="modal-content-area" id="modalContent"></div>
