--- a/src/components/record/RecordPage.module.css
+++ b/src/components/record/RecordPage.module.css
@@ -1,5 +1,10 @@
 /* Record Viewer Page Styles */
 
+/* Header Icon */
+.headerIcon {
+    background-color: var(--icon-query);
+}
+
 /* Record Info */
 .recordInfo {
     display: flex;
