--- a/src/components/rest-api/RestApiTab.module.css
+++ b/src/components/rest-api/RestApiTab.module.css
@@ -11,3 +11,11 @@
 .responseEditor {
     height: 400px;
 }
+
+.headerIconRest {
+    background-color: var(--icon-query);
+}
+
+.headerIconSuccess {
+    background-color: var(--icon-success);
+}
