--- a/src/components/button-dropdown/ButtonDropdown.module.css
+++ b/src/components/button-dropdown/ButtonDropdown.module.css
@@ -8,7 +8,7 @@
 .main {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    border-right: 1px solid var(--border-color);
 }
 
 .trigger {
