--- a/src/components/events/EventsTab.module.css
+++ b/src/components/events/EventsTab.module.css
@@ -3,3 +3,11 @@
     flex-direction: column;
     gap: 20px;
 }
+
+.headerIconEvents {
+    background-color: var(--icon-events);
+}
+
+.headerIconPublish {
+    background-color: var(--icon-events-publish);
+}
