--- a/src/components/monaco-editor/MonacoEditor.module.css
+++ b/src/components/monaco-editor/MonacoEditor.module.css
@@ -5,6 +5,9 @@
     position: relative;
     width: 100%;
     height: 200px;
+    border: 1px solid var(--border-color);
+    border-radius: var(--radius-md);
+    overflow: hidden;
 }
 
 /* Resize handle at bottom of editor */
